--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8" >
-        <title>What to eat</title>
-        <link rel="stylesheet" href="styles.css">
-        <script src="app.js" charset="utf-8"></script>
-    </head>
-    <body>
-        <h1>What To Eat</h1>
-        
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="app.js"></script>
+    <title>what to eat</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1 id="title">What to eat</h1>
+      <button id="btn">Find option</button>
+      <h3 id="answer">You could eat from... <span id="result"></span></h3>
+    </div>
+  </body>
 </html>
