Update app.js index.html styles.css
Added form, labels and inputs in html file and started styling them

--- a/index.html
+++ b/index.html
@@ -17,6 +17,83 @@
   <body>
     <div class="container">
       <h1 id="title">What to eat</h1>
+      <div id="form-container">
+        <h3 id="options">Options:</h3>
+        <form id="form">
+          <div class="row">
+            <label for="">Baguette</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Boneless</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Burgers</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Coffee</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Corndogs</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Crepes</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">French fries</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Fried chicken</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Ice cream</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Milkshakes</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Nachos</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Pasta</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Pizza</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Salad</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Tacos/carne asada</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Tacos/cebosos</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Tacos/pastor</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+          <div class="row">
+            <label for="">Tacos/vapor</label>
+            <input type="checkbox" name="" id="" />
+          </div>
+        </form>
+      </div>
       <button id="btn">Find option</button>
       <h3 id="answer">You could eat from... <span id="result"></span></h3>
     </div>
