Update app.js index.html styless.css
Added include unhealthy radio buttons and made a few changes to clean code

--- a/index.html
+++ b/index.html
@@ -11,91 +11,104 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/9905fafc47.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="app.js"></script>
     <title>what to eat</title>
   </head>
   <body>
-    <div class="container">
-      <h1 id="title">What to eat</h1>
-      <div id="form-container">
-        <h3 id="options">Options:</h3>
-        <form id="form">
-          <div class="row">
-            <label for="">Baguette</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Boneless</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Burgers</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Coffee</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Corndogs</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Crepes</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">French fries</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Fried chicken</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Ice cream</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Milkshakes</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Nachos</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Pasta</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Pizza</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Salad</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Tacos/carne asada</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Tacos/cebosos</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Tacos/pastor</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-          <div class="row">
-            <label for="">Tacos/vapor</label>
-            <input type="checkbox" name="" id="" />
-          </div>
-        </form>
+    <h1 id="title">What to eat</h1>
+    <div id="form-container">
+      <div class="form">
+        <h3 id="options" class="subject">Options:</h3>
+        <div class="row">
+          <label for="">Baguette</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Boneless</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Burgers</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Coffee</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Corndogs</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Crepes</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">French fries</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Fried chicken</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Ice cream</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Milkshakes</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Nachos</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Pasta</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Pizza</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Salad</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Tacos/carne asada</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Tacos/cebosos</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Tacos/pastor</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">Tacos/vapor</label>
+          <input type="checkbox" name="" id="" />
+        </div>
       </div>
-      <button id="btn">Find option</button>
-      <h3 id="answer">You could eat from... <span id="result"></span></h3>
+      <div class="form">
+        <h3 id="unhealthy" class="subject">Include unhealthy?</h3>
+        <div class="row">
+          <label for="">Yes</label>
+          <input type="radio" name="" id="" />
+        </div>
+        <div class="row">
+          <label for="">No</label>
+          <input type="radio" name="" id="" />
+        </div>
+      </div>
     </div>
+    <button id="btn">Find option</button>
+    <h3 id="answer">You could eat from... <span id="result"></span></h3>
   </body>
 </html>
