Update app.js index.html styles.css
Added food type variables to app.js

--- a/index.html
+++ b/index.html
@@ -20,80 +20,80 @@
   </head>
   <body>
     <h1 id="title">What to eat</h1>
-    <div id="form-container">
+    <div id="formContainer">
       <div class="form">
         <h3 id="options" class="subject">Options:</h3>
         <div class="row">
-          <label for="">Baguette</label>
-          <input type="checkbox" name="" id="" />
+          <label for="baguette">Baguette</label>
+          <input type="checkbox" id="baguette"/>
         </div>
         <div class="row">
           <label for="">Boneless</label>
-          <input type="checkbox" name="" id="" />
+          <input type="checkbox" id="Boneless" />
         </div>
         <div class="row">
-          <label for="">Burgers</label>
-          <input type="checkbox" name="" id="" />
+          <label for="burgers">Burgers</label>
+          <input type="checkbox" id="burgers" />
         </div>
         <div class="row">
-          <label for="">Coffee</label>
-          <input type="checkbox" name="" id="" />
+          <label for="coffee">Coffee</label>
+          <input type="checkbox" id="coffee" />
         </div>
         <div class="row">
-          <label for="">Corndogs</label>
-          <input type="checkbox" name="" id="" />
+          <label for="corndogs">Corndogs</label>
+          <input type="checkbox" id="corndogs" />
         </div>
         <div class="row">
-          <label for="">Crepes</label>
-          <input type="checkbox" name="" id="" />
+          <label for="crepes">Crepes</label>
+          <input type="checkbox" id="crepes" />
         </div>
         <div class="row">
-          <label for="">French fries</label>
-          <input type="checkbox" name="" id="" />
+          <label for="frechFries">French fries</label>
+          <input type="checkbox" id="frechFries" />
         </div>
         <div class="row">
-          <label for="">Fried chicken</label>
-          <input type="checkbox" name="" id="" />
+          <label for="friedChicken">Fried chicken</label>
+          <input type="checkbox" id="friedChicken" />
         </div>
         <div class="row">
-          <label for="">Ice cream</label>
-          <input type="checkbox" name="" id="" />
+          <label for="iceCream">Ice cream</label>
+          <input type="checkbox" id="iceCream" />
         </div>
         <div class="row">
-          <label for="">Milkshakes</label>
-          <input type="checkbox" name="" id="" />
+          <label for="milkshakes">Milkshakes</label>
+          <input type="checkbox" id="milkshakes" />
         </div>
         <div class="row">
-          <label for="">Nachos</label>
-          <input type="checkbox" name="" id="" />
+          <label for="nachos">Nachos</label>
+          <input type="checkbox" id="nachos" />
         </div>
         <div class="row">
-          <label for="">Pasta</label>
-          <input type="checkbox" name="" id="" />
+          <label for="pasta">Pasta</label>
+          <input type="checkbox" id="pasta" />
         </div>
         <div class="row">
-          <label for="">Pizza</label>
-          <input type="checkbox" name="" id="" />
+          <label for="pizza">Pizza</label>
+          <input type="checkbox" id="pizza" />
         </div>
         <div class="row">
-          <label for="">Salad</label>
-          <input type="checkbox" name="" id="" />
+          <label for="salad">Salad</label>
+          <input type="checkbox" id="salad" />
         </div>
         <div class="row">
-          <label for="">Tacos/carne asada</label>
-          <input type="checkbox" name="" id="" />
+          <label for="tacosCarneAsada">Tacos/carne asada</label>
+          <input type="checkbox" id="tacosCarneAsada" />
         </div>
         <div class="row">
-          <label for="">Tacos/cebosos</label>
-          <input type="checkbox" name="" id="" />
+          <label for="tacosCebosos">Tacos/cebosos</label>
+          <input type="checkbox" id="tacosCebosos" />
         </div>
         <div class="row">
-          <label for="">Tacos/pastor</label>
-          <input type="checkbox" name="" id="" />
+          <label for="tacosPastor">Tacos/pastor</label>
+          <input type="checkbox" id="tacosPastor" />
         </div>
         <div class="row">
-          <label for="">Tacos/vapor</label>
-          <input type="checkbox" name="" id="" />
+          <label for="tacosVapor">Tacos/vapor</label>
+          <input type="checkbox" id="tacosVapor" />
         </div>
       </div>
       <div class="form">
