--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row">
           <label for="">Boneless</label>
-          <input type="checkbox" id="Boneless" />
+          <input type="checkbox" id="boneless" />
         </div>
         <div class="row">
           <label for="burgers">Burgers</label>
@@ -51,7 +51,7 @@
         </div>
         <div class="row">
           <label for="frechFries">French fries</label>
-          <input type="checkbox" id="frechFries" />
+          <input type="checkbox" id="frenchFries" />
         </div>
         <div class="row">
           <label for="friedChicken">Fried chicken</label>
