Updated app.js index.html
Changed shuffle and find random option functionality to a list of options

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       </div>
     </div>
     <button id="btn">Find option</button>
-    <h3 id="answer">You could eat from... <span id="result"></span></h3>
+    <h3 id="answer">You could eat from...</h3>
+    <p id="result"></p>
   </body>
 </html>
